workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/MovimentoSinistro__c.object-meta.xml
<CustomObject>
    <description>Registrar os movimentos de sinistro relacionado ao caso. 
Objeto Relacionado do Caso.</description>
    <label>Movimento de Sinistro</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Nome de Movimento de Sinistro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimentos de Sinistro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>