workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/BeneficiarioGarantia__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario da Garantia</label>
    <referenceTo>BeneficiarioGarantia__c</referenceTo>
    <relationshipLabel>Movimentos de Sinistro</relationshipLabel>
    <relationshipName>MovimentosSinistro</relationshipName>
    <type>Lookup</type>
</CustomField>