workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Movimentos de Sinistro</relationshipLabel>
    <relationshipName>MovimentosSinistro</relationshipName>
    <type>Lookup</type>
</CustomField>