workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/DataMovimento__c.field-meta.xml
<CustomField>
    <fullName>DataMovimento__c</fullName>
    <label>Data do Movimento</label>
    <type>DateTime</type>
</CustomField>