workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/DescricaoMovimento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMovimento__c</fullName>
    <label>Descrição do Movimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>AVISO +</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AC. AVISADO +</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AC. AVISADO -</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>ENC. SEM INDENIZACAO -</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>REATIVACAO</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>ACERTO AVISO AUTOM  +</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>ACERTO AVISO AUTOM   -</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>DESPESAS             +</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>ACERTO DESPESAS      +</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>ACERTO DESPESAS      -</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Multas Contratuais</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>Pagamentos Indevidos</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>PAGAMENTO PARCIAL    +</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ACERTO PGTO PARCIAL  +</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>ACERTO PGTO PARCIAL -</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>PAGAMENTO FINAL      +</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>ACERTO PAGTO FINAL   +</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>ACERTO PAGTO FINAL   -</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>ACERTO JUROS JUR (+)</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>ACERTO JUROS JUR (-)</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>ACERTO CORRECAO JUR (+)</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>ACERTO CORRECAO JUR (-)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>