workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/PagamentoGarantia__c.field-meta.xml
<CustomField>
    <fullName>PagamentoGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do Sinistro</label>
    <referenceTo>PagamentoGarantia__c</referenceTo>
    <relationshipLabel>Movimentos de Sinistro</relationshipLabel>
    <relationshipName>MovimentosSinistro</relationshipName>
    <type>Lookup</type>
</CustomField>