workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/SequenciaMovimento__c.field-meta.xml
<CustomField>
    <fullName>SequenciaMovimento__c</fullName>
    <externalId>true</externalId>
    <label>Sequência do Movimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>