workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/SinistroJudicial__c.field-meta.xml
<CustomField>
    <fullName>SinistroJudicial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sinaliza se o movimento é judicial ou não</description>
    <label>Sinistro Judicial?</label>
    <type>Checkbox</type>
</CustomField>