workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/TipoMovimento__c.field-meta.xml
<CustomField>
    <fullName>TipoMovimento__c</fullName>
    <label>Tipo de Movimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>Despesa</fullName>
            </value>
            <value>
                <fullName>Pagamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>