workspace-sf/force-app/main/default/objects/MovimentoSinistro__c/fields/ValorMovimento__c.field-meta.xml
<CustomField>
    <fullName>ValorMovimento__c</fullName>
    <label>Valor Movimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>